[package]
name = "sidetone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ringbuf = "0.4.1"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15.3"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { version = "0.11", default-features = false, features = ["audio_unit", "core_audio"] }
