[package]
name = "sidetone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ringbuf = "0.4.1"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
ctrlc = "3.4.5"
fundsp = { version = "0.20.0", default-features = false, features = ["std"] }
crossbeam-channel = "0.5.14"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
